
  CHANGES SINCE 0.6
=====================

Issue 83 solved
Comparator for geo-coordinates added
A q-grams comparator added
Bug in CSV data source fixed
Added data debug mode
Fixed bug with reusing link file as test file
Added pretty-printing of records
Better interactive debugging behaviour
InMemoryLinkDatabase now complete and tested
LinkDatabaseMatchListener bug fixes