@@ -1,4 +1,4 @@
 #maven.buildNumber.plugin properties file
-#Mon Dec 31 12:28:43 CET 2012
+#Fri Jan 04 13:35:04 CET 2013
 buildNumber=4
-buildNumber0=1366
+buildNumber0=1402
